[metadata]
name = copasul
version = 1.4.0
author = Uwe Reichel
author_email = uwe.reichel@nytud.mta.hu
description = Prosody stylization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reichelu/copasul
project_urls =
    repository = https://github.com/reichelu/copasul
    documentation = https://github.com/reichelu/copasul
    article = https://arxiv.org/abs/1612.04765
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.8
install_requires =
    audeer
    matplotlib
    numpy
    pandas
    scikit-learn
    scipy
    tqdm
